--- a/craft/templates/layouts/_default.twig
+++ b/craft/templates/layouts/_default.twig
@@ -4,7 +4,7 @@
 {% cache %}
 	{% minify %}
 		<!DOCTYPE html>
-		<html>
+		<html itemscope itemtype="http://schema.org/WebPage">
 			<head>
 				{% include 'partials/meta.twig' %}
 	{% endminify %}
@@ -12,6 +12,8 @@
 					{% include 'assets/css/critical.css' %}
 				</style>
 	{% minify %}
+				{% block meta %}
+				{% endblock %}
 			</head>
 			<body>
 				{% include 'partials/svg.twig' %}
@@ -59,9 +61,6 @@
 						'class' : 'page-title-svg'
 					});
 				</script>
-
-				{# pin it button #}
-				<script async defer src="{{ siteRoot }}dist/assets/vendor/pinit.js"></script>
 			</body>
 		</html>
 	{% endminify %}
