--- a/craft/templates/layouts/_error.twig
+++ b/craft/templates/layouts/_error.twig
@@ -4,7 +4,7 @@
 {% cache %}
 	{% minify %}
 		<!DOCTYPE html>
-		<html>
+		<html itemscope itemtype="http://schema.org/WebPage">
 			<head>
 				{% include 'partials/meta.twig' %}
 	{% endminify %}
@@ -12,6 +12,8 @@
 					{% include 'assets/css/critical.css' %}
 				</style>
 	{% minify %}
+				{% block meta %}
+				{% endblock %}
 			</head>
 			<body class="error-page">
 				{% include 'partials/svg.twig' %}
