--- a/craft/templates/partials/off-canvas.twig
+++ b/craft/templates/partials/off-canvas.twig
@@ -1,6 +1,6 @@
 <nav class="off-canvas position-right" id="offCanvasRight" data-off-canvas itemscope itemtype="http://schema.org/SiteNavigationElement">
 	{{ craft.amNav.getNav('main', {
 		class: 'menu vertical side-nav',
-		id: ''
+		id: 'off-canvas'
 	}) }}
 </nav>
