forgot to add id for homepage menu

--- a/craft/templates/partials/navigation.twig
+++ b/craft/templates/partials/navigation.twig
@@ -2,7 +2,7 @@
 	{% if entry.slug == 'homepage' %}
 		{{ craft.amNav.getNav('main', {
 			class: 'menu align-center',
-			id: ''
+			id: 'main'
 		}) }}
 	{% else %}
 		{{ craft.amNav.getNav('main', {
