removed unneeded class

--- a/craft/templates/albums/_entry.twig
+++ b/craft/templates/albums/_entry.twig
@@ -8,7 +8,7 @@
 			<h1 class="page-title" itemprop="headline">&#xe00c;{{ entry.title }}&#xe013;</h1>
 		</header>
 		<section class="row">
-			<div class="contents small-12 column" itemprop="text">
+			<div class="contents column" itemprop="text">
 				{{ entry.body }}
 			</div>
 			<div class="row image-items-list small-collapse" id="image-items-list">
