--- a/craft/templates/sets/_entry.twig
+++ b/craft/templates/sets/_entry.twig
@@ -12,9 +12,9 @@
 				<img src="{{ siteRoot }}dist/assets/img/{{ category.title }}-title.png" width="375" height="110" alt="{{ entry.title }}">
 			</h1>
 		</header>
-		<article class="row column content" itemprop="text">
+		<div class="row column content" itemprop="text">
 			{{ category.body }}
-		</article>
+		</div>
 		<section class="gallery-container-page">
 			{% include 'partials/album-slider.twig' %}
 		</section>
