removing duplicate id

--- a/craft/templates/pages/_entry.twig
+++ b/craft/templates/pages/_entry.twig
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block content %}
-	<main id="main" class="main-content regular-page page-{{ entry.id }} page-{{ entry.slug }}" itemscope="" itemprop="mainContentOfPage" itemtype="http://schema.org/WebPageElement">
+	<main class="main-content regular-page page-{{ entry.id }} page-{{ entry.slug }}" itemscope="" itemprop="mainContentOfPage" itemtype="http://schema.org/WebPageElement">
 		<header class="page-title-container">
 			<h1 class="page-title" itemprop="headline">&#xe00c;{{ entry.title }}&#xe013;</h1>
 		</header>
