removed redirect input

--- a/craft/templates/pages/_entry.twig
+++ b/craft/templates/pages/_entry.twig
@@ -35,7 +35,7 @@
 						<form method="post" accept-charset="UTF-8" id="ajax-contact">
 							{{ getCsrfInput() }}
 							<input type="hidden" name="action" value="contactForm/sendMessage">
-							<input type="hidden" name="redirect" value="{{ 'pages/contact/thanks'|hash }}">
+{# 							<input type="hidden" name="redirect" value="{{ 'pages/contact/thanks'|hash }}"> #}
 							<div class="small-12" itemprop="text">
 								<p id="thanks" class="contact-form-success" style="display: none">
 									{{ 'Your message has been sent.' | translate }}
