--- a/templates/pages/_entry.twig
+++ b/templates/pages/_entry.twig
@@ -102,7 +102,9 @@
 							</div>
 							<input class="hide" id="preferredKitten" name="preferredKitten" type="text">
 							<div class="form-group contact-form-submit row column">
-								{{ craft.recaptcha.render() }}
+								{# {{ craft.recaptcha.render({
+									size: 'compact'
+								}) }} #}
 								<button type="submit" data-text="Send" class="button">{{ 'Send Enquiry' | translate }}</button>
 								<div id="spinner" class="form-spinner spinner-loading"></div>
 							</div>
