--- a/templates/pages/_entry.twig
+++ b/templates/pages/_entry.twig
@@ -21,6 +21,7 @@
 				<div class="content">
 					{{ entry.body }}
 					{% if entry.slug == 'contact' %}
+
 						{% macro errorList(errors) %}
 							{% if errors %}
 								<span class="form-error is-visible">
@@ -32,6 +33,7 @@
 						{% endmacro %}
 
 						{% from _self import errorList %}
+
 						<form method="post" action="" accept-charset="UTF-8" id="ajax-contact">
 							{{ csrfInput() }}
 							<input type="hidden" name="action" value="contact-form/send">
@@ -44,16 +46,17 @@
 									{{ 'An error occurred. Please try again.' | translate }}
 								</p>
 							</div>
+
 							<div class="row form-columns">
 								<div class="medium-6 columns first-column">
 									<div class="form-group">
 										<label for="from-name">{{ 'Name' | translate }}</label>
-										<input type="text" id="from-name" name="fromName" value="{{ message.fromName ?? '' }}" aria-invalid="false" required>
+										<input id="from-name" type="text" name="fromName" value="{{ message.fromName ?? '' }}" required>
 										{{ message is defined and message ? errorList(message.getErrors('fromName')) }}
 									</div>
 									<div class="form-group">
 										<label for="from-email">{{ 'Email' | translate }}</label>
-										<input type="email" id="from-email" name="fromEmail" value="{{ message.fromEmail ?? '' }}" aria-invalid="false" required>
+										<input id="from-email" type="email" name="fromEmail" value="{{ message.fromEmail ?? '' }}" required>
 										{{ message is defined and message ? errorList(message.getErrors('fromEmail')) }}
 									</div>
 									<div class="form-group">
@@ -90,19 +93,20 @@
 									</div>
 									<div class="form-group">
 										<label for="subject">{{ 'Subject' | translate }}</label>
-										<input type="text" id="subject" name="subject" value="{{ message.subject ?? '' }}" aria-invalid="false" required>
+										<input id="subject" type="text" name="subject" value="{{ message.subject ?? '' }}"  required>
 										{{ message is defined and message ? errorList(message.getErrors('subject')) }}
 									</div>
 									<div class="form-group">
 										<label for="message">{{ 'Message' | translate }}</label>
-										<textarea name="message[body]" id="message" rows="10" aria-invalid="false" required>{{ message.message ?? '' }}</textarea>
+										<textarea rows="10" cols="40" id="message" name="message[body]" required>{{ message.message ?? '' }}</textarea>
 										{{ message is defined and message ? errorList(message.getErrors('message')) }}
 									</div>
 								</div>
 							</div>
 							<input class="hide" id="preferredKitten" name="preferredKitten" type="text">
 							<div class="form-group contact-form-submit row column">
-								{{ craft.recaptcha.render() }}
+								{# {{ craft.recaptcha.render() }} #}
+								{# {{ craft.contactFormExtensions.recaptcha | raw }} #}
 								<button type="submit" data-text="Send" class="button">{{ 'Send Enquiry' | translate }}</button>
 								<div id="spinner" class="form-spinner spinner-loading"></div>
 							</div>
