--- a/templates/pages/_entry.twig
+++ b/templates/pages/_entry.twig
@@ -112,7 +112,7 @@
 							</div>
 							<input class="hide" id="preferredKitten" name="preferredKitten" type="text">
 							<div class="form-group contact-form-submit row column">
-								{% nocache %}{{ craft.recaptcha.render() }}{% endnocache %}
+								{% nocache %}{{ craft.contactFormExtensions.recaptcha | raw }}{% endnocache %}
 								<button type="submit" data-text="Send" class="button">{{ 'Send Enquiry' | translate }}</button>
 								<div id="spinner" class="form-spinner spinner-loading"></div>
 							</div>
