--- a/templates/pages/_entry.twig
+++ b/templates/pages/_entry.twig
@@ -105,7 +105,7 @@
 									</div>
 									<div class="form-group">
 										<label for="message">{{ 'Message' | translate }}</label>
-										<textarea rows="10" cols="40" id="message" name="message[body]" required>{{ message.message ?? '' }}</textarea>
+										<textarea rows="10" cols="40" id="message" name="message[body]" required>{{ message.message.body ?? '' }}</textarea>
 										{{ message is defined and message ? errorList(message.getErrors('message')) }}
 									</div>
 								</div>
